--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ header {
 }
 
 .container {
-  background-color: pink;
+  /*background-color: pink; */
   width: 400px;
   margin-left: auto;
   margin-right: auto;
@@ -43,7 +43,7 @@ header {
 
 .info p {
   margin: 0;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .info ul {
@@ -63,4 +63,29 @@ header {
   margin-right: auto;
 }
 
-.
+.works > h1 {
+  font-weight: normal;
+  font-size: 24px;
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+
+.works > section {
+  margin-bottom: 60px
+}
+
+.works > section > h1 {
+  font-weight: normal;
+}
+
+.works p {
+  line-height: 1.8;
+}
+
+footer p {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 60px;
+  color: gray;
+}
